--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "1.0.0",
   "description": "reverse regular expression computation",
   "bin": "./bin/revexp.mjs",
-  "main": "src/index.mjs",
+  "main": "build/index.js",
+  "module": "src/index.mjs",
+  "files": [
+    "bin/**/*",
+    "build/**/*",
+    "src/**/*"
+  ],
   "scripts": {
     "test": "./src/test.mjs",
+    "build": "rollup --config rollup.config.js",
     "revexp": "./bin/revexp.mjs"
   },
   "repository": {
@@ -20,5 +27,9 @@
   "bugs": {
     "url": "https://github.com/davidje13/revexp/issues"
   },
-  "homepage": "https://github.com/davidje13/revexp#readme"
+  "homepage": "https://github.com/davidje13/revexp#readme",
+  "devDependencies": {
+    "rollup": "^2.56.3",
+    "rollup-plugin-terser": "^7.0.2"
+  }
 }
