--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "files": [
     "bin/**/*",
     "build/**/*",
-    "src/**/*"
+    "src/**/*",
+    "index.d.ts"
   ],
   "scripts": {
     "test": "./src/test.mjs",
