--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "index.d.ts"
   ],
   "scripts": {
-    "test": "lean-test && lean-test --browser chrome,firefox",
+    "test": "lean-test --target node,chrome,firefox",
     "build": "rollup --config rollup.config.js",
     "revexp": "./bin/revexp.mjs"
   },
@@ -31,8 +31,8 @@
   },
   "homepage": "https://github.com/davidje13/RevExp#readme",
   "devDependencies": {
-    "lean-test": "^1.4.0",
-    "rollup": "^2.56.3",
-    "rollup-plugin-terser": "^7.0.2"
+    "lean-test": "2.x",
+    "rollup": "2.x",
+    "rollup-plugin-terser": "7.x"
   }
 }
