--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "test": "lean-test --target node,chrome,firefox",
-    "build": "rollup --config rollup.config.js",
+    "build": "rollup --config rollup.config.mjs",
     "revexp": "./bin/revexp.mjs"
   },
   "repository": {
@@ -31,8 +31,8 @@
   },
   "homepage": "https://github.com/davidje13/RevExp#readme",
   "devDependencies": {
+    "@rollup/plugin-terser": "0.4.x",
     "lean-test": "2.x",
-    "rollup": "2.x",
-    "rollup-plugin-terser": "7.x"
+    "rollup": "4.x"
   }
 }
